Bugzilla bug 404399: getaddrinfo with AI_NUMERICHOST is slow on Mac OS X (10.4).  So we only use it to convert IPv6 address strings with scope IDs. r=dwitte.